# win-loss-counter

./: .dockerignore  .gitignore  Dockerfile  Readme.md  docker-compose.yml
backend/: pyproject.toml
backend/win_loss_counter/: __init__.py  __main__.py  wsgi.py
frontend/win-loss-counter/: README.md  index.html  package-lock.json  package.json
frontend/win-loss-counter/src/: App.vue  main.js
frontend/win-loss-counter/src/assets/: main.css
frontend/win-loss-counter/src/components/: NumberInput.vue  ScoreBoard.vue  ScoreUpdater.vue
frontend/win-loss-counter/src/router/: index.js
frontend/win-loss-counter/src/views/: ControlView.vue  HomeView.vue
hosting/: Makefile  host_nginx_config
hosting/config/: supervisord.conf  wsgi.ini  wsgi_socket.ini
