[tool.poetry]
name = "win-loss-counter"
version = "0.1.0"
description = "Socket backend for win-loss-counter"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
python-decouple = "^3.8"
flask-cors = "^4.0.1"


[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
